# moredeps

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
.github/workflows/: build.yml  pages.yml
docs/: CNAME  build_options.md  build_plan.md  ci_plan.md  ghostty_wasm_investigation.md  index.html  mobile_plan.md  next_steps.md  shared_libs.md  work_log.md
examples/: README.md  download-deps.py  download-deps.sh  vendor-release.sh  vendor-release.yml
examples/cmake-fetch/: CMakeLists.txt  main.c  moredeps_fetch.py
examples/mfs-lua/: CMakeLists.txt  README.md  main.c  mfs_lua.c  test_main.c  test_mfs.lua
examples/mfs-lua/scripts/: data.txt  helper.lua  loaded.lua  main.lua  sandbox_escape_test.lua  shim.lua
examples/mfs-mtcc/: CMakeLists.txt  README.md  main.c
examples/mfs-mtcc-embedded/: CMakeLists.txt  README.md  main.c
examples/mfs-mtcc-embedded/jit/: main.c
examples/mfs-mtcc/scripts/: main.c
examples/vfs-lua/: CMakeLists.txt  README.md
examples/vfs-lua/scripts/: helper.lua
examples/vfs-mtcc/: main.c
patches/: dawn_export_deps.patch  enet_ios_clock_gettime.cmake  ggml-math-lib.patch  libwebsockets_disable_wx.patch  libwebsockets_export_deps.patch  luv-find-libuv.patch  luv-nopath.cmake  miniaudio_ios_objc.cmake  miniaudio_shared_link.patch  reproc_export_deps.patch  sdl3webgpu_emdawn_stringview.patch  zlib.patch  zlib_config_optional_components.patch
scripts/: apply_patch.cmake  build_all.sh  cache_restore.py  ci_package.py  clean_all.sh  install_dawn.cmake  patch_skribidi.py  setup_vcvars.sh  upload_release_assets.py  validate_dev_env.sh
src/FastNoiseLite/: CMakeLists.txt
src/budouxc/: CMakeLists.txt
src/cgltf/: CMakeLists.txt
src/cimgui/: CMakeLists.txt
src/fontstash/: CMakeLists.txt  fontstash.c
src/ghostty/: CMakeLists.txt
src/libunibreak/: CMakeLists.txt
src/libwebsockets/: CMakeLists.txt
src/lua/: CMakeLists.txt
src/mfs/: mfs.h
src/microui/: CMakeLists.txt
src/minigamepad/: CMakeLists.txt  minigamepad.c
src/mtcc/: CMakeLists.txt  build_mtcc_windows.bat.in
src/nanovg/: CMakeLists.txt  nanovg.c
src/raudio/: CMakeLists.txt  raudio.c
src/sdl3webgpu/: CMakeLists.txt
src/skribidi/: CMakeLists.txt
src/sokol_app/: CMakeLists.txt
src/sokol_args/: CMakeLists.txt  sokol_args.c
src/sokol_audio/: CMakeLists.txt  sokol_audio.c
src/sokol_fetch/: CMakeLists.txt  sokol_fetch.c
src/sokol_gfx/: CMakeLists.txt  sokol_gfx.c
src/sokol_glue/: CMakeLists.txt  sokol_glue.c
src/sokol_gp/: CMakeLists.txt  sokol_gp.c
src/sokol_log/: CMakeLists.txt  sokol_log.c
src/sokol_time/: CMakeLists.txt  sokol_time.c
src/sokol_variant/: CMakeLists.gp.in  CMakeLists.txt.in  sokol_gp_compat_note.txt  sokol_impl.c.in
src/sqlite-amalgamation/: CMakeLists.txt
src/stb_ds/: CMakeLists.txt
src/stb_image/: CMakeLists.txt
src/stb_image_resize/: CMakeLists.txt
src/stb_image_write/: CMakeLists.txt
src/stb_rect_pack/: CMakeLists.txt
src/stb_truetype/: CMakeLists.txt
src/tinycsocket/: CMakeLists.txt
src/tomlc99/: CMakeLists.txt
src/ubench/: CMakeLists.txt  ubench.c
src/utest/: CMakeLists.txt  utest.c
src/vfs/: md_vfs.h
src/vma/: CMakeLists.txt
tests/: README.md  run_tests.py
tests/snippets/FastNoiseLite/: config.json  test.c
tests/snippets/SheenBidi/: config.json  test.c
tests/snippets/boringssl/: config.json  test.c
tests/snippets/box3d/: config.json  test.c
tests/snippets/budouxc/: config.json  test.c
tests/snippets/cJSON/: test.c
tests/snippets/cglm/: config.json  test.c
tests/snippets/cgltf/: config.json  test.c
tests/snippets/cimgui/: test.c
tests/snippets/curl/: config.json  test.c
tests/snippets/dawn/: config.json  test.c
tests/snippets/enet/: config.json  test.c
tests/snippets/flecs/: config.json  test.c
tests/snippets/fontstash/: config.json  test.c
tests/snippets/freetype/: config.json  test.c
tests/snippets/ggml/: test.c
tests/snippets/glfw/: config.json  test.c
tests/snippets/harfbuzz/: config.json  test.c
tests/snippets/libdatachannel/: config.json  test.cpp
tests/snippets/libjpeg-turbo/: config.json  test.c
tests/snippets/libpng/: config.json  test.c
tests/snippets/libunibreak/: config.json  test.c
tests/snippets/libuv/: config.json  test.c
tests/snippets/libwebsockets/: config.json  test.c
tests/snippets/libyaml/: config.json  test.c
tests/snippets/lua/: config.json  test.c
tests/snippets/luv/: config.json  test.c
tests/snippets/lz4/: config.json  test.c
tests/snippets/md4c/: test.c
tests/snippets/meshoptimizer/: test.c
tests/snippets/microui/: config.json  test.c
tests/snippets/mimalloc/: config.json  test.c
tests/snippets/miniaudio/: test.c
tests/snippets/minigamepad/: config.json  test.c
tests/snippets/mtcc/: config.json  test.c
tests/snippets/nanovg/: config.json  test.c
tests/snippets/openal-soft/: config.json  test.c
tests/snippets/pcre2/: test.c
tests/snippets/physfs/: config.json  test.c
tests/snippets/raudio/: config.json  test.c
tests/snippets/raylib/: config.json  test.c
tests/snippets/re2/: test.cc
tests/snippets/reproc/: config.json  test.c
tests/snippets/sdl3/: config.json  test.c
tests/snippets/sdl3webgpu/: config.json  test.c
tests/snippets/skribidi/: config.json  test.c
tests/snippets/sokol/: config.json  test.c
tests/snippets/sokol_args/: config.json  test.c
tests/snippets/sokol_fetch/: config.json  test.c
tests/snippets/sokol_gp/: config.json  test.c
tests/snippets/sokol_log/: config.json  test.c
tests/snippets/sokol_time/: config.json  test.c
tests/snippets/sqlite-amalgamation/: test.c
tests/snippets/stb_ds/: config.json  test.c
tests/snippets/stb_image/: config.json  test.c
tests/snippets/stb_image_resize/: config.json  test.c
tests/snippets/stb_image_write/: config.json  test.c
tests/snippets/stb_rect_pack/: config.json  test.c
toolchain/: android_arm64.cmake  android_x64.cmake  ios_arm64.cmake  ios_simulator_arm64.cmake  linux_arm64.cmake  linux_x64.cmake  macos_arm64.cmake  wasm_emscripten.cmake  windows_arm64.cmake  windows_x64.cmake
(+25 files in other folders)
